--- a/package.json
+++ b/package.json
@@ -9,9 +9,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "multer": "^1.4.3",
-    "serve-index": "^1.9.1"
-  }
+  "dependencies": {}
 }
